--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "laravel/laravel",
+    "name": "all.mp/all.mp",
     "type": "project",
-    "description": "The Laravel Framework.",
+    "description": "ALL.MP System",
     "keywords": [
         "framework",
         "laravel"
